@@ -5,15 +5,15 @@ AUX gitflow-0.3-path_fixes.patch 1136 RMD160 14e7f99ce1f6ce3400a0994a673707a46e3
 DIST git-flow-completion-0.4.0.tar.gz 3868 RMD160 635771b0bd19cea3c9b6c0cdd17272e5a1b03394 SHA1 8aa4d0ac31d5c337c111069a5b3f6ba2fa98a3f6 SHA256 6b42beeecc200eae6518c5300b96c2a32e822faa5439c759ff2c32cc4658b2a6
 DIST gitflow-0.4.1.tar.gz 16745 RMD160 d00837a37f9892de7fa457e414efe22af7a426e8 SHA1 846d3540d08d5bbc875ad6ceae22e6c795adecee SHA256 896fdbf1fecba4e79b666987c95ba2881565255452fd73006a5db526100cbf59
 DIST shFlags-1.0.3.tar.gz 43034 RMD160 0a285c071810ad2f62cdc8d316489416e640bb27 SHA1 b9cfd6a597f8ec40aa9a29ac5583c572d1302011 SHA256 a6b828f7c7d3d23ae8a3bfa6f834f971f3a76fb46b09695bbeba07793d87b044
-EBUILD gitflow-0.4.1-r1.ebuild 1329 RMD160 ffcd4fad4289dfda8b9fc4bae21a499eec59c1f3 SHA1 961dc43f58860c24a56f58a67a684e7b96dd30af SHA256 3777fc43de117b75341293ea46642c3b152566c7240df0a69cdd1d5bb135fec9
+EBUILD gitflow-0.4.1-r1.ebuild 1244 RMD160 1e9f7aa87731b779a1f0b257dbb032926315c9f6 SHA1 99cab30622f72c6371bc5b086c84e36f13a035a6 SHA256 810428f1ba1e2aeabdccbd9ec7ce631846c2fabe849c0c5871cf2162a183c42d
 EBUILD gitflow-0.4.1.ebuild 1446 RMD160 fd626088a986790772906f2550533d80a12ec271 SHA1 ae291ed2e28920f683f0b0bb407f69b24aace0da SHA256 7eb8dc4e322317f7d7861e1386faa3ed1b65f264ea009f31c48a21dc7a48bae4
-MISC ChangeLog 2649 RMD160 21285075dae6c2890c91b3df750994b0079b31cb SHA1 d9b836b01af6c184fd67a401c92d2151b5e80cca SHA256 5fe2c12ce4dba922d5976c43fcc7744416bcde4c12aa07c77dbcf43cb4042042
+MISC ChangeLog 2765 RMD160 7ec326594e85b2833f8c2b1b3d713202b2e8a1ed SHA1 b4036ffb1c854109690b537c75216a39ffbd3a7c SHA256 4d42044574ab2352dc4ee93de5800024a11c005e791b66dbfe7446d84d3a6aa9
 MISC metadata.xml 584 RMD160 612b440e33cb299bc1ba8da213dfd84d857e56ea SHA1 909d9750b63b64d5cbe18c552f263c80ce55bb43 SHA256 1799df18fe8c9a8b542c09433c1d4eae183e1758a932c4ce8621785e19103eca
 MISC watch 26 RMD160 ccad0aceac06d325268f15c800b00170d7de5e0b SHA1 819321d9fd7f2432ecd8f09aa0a5d0babc13952b SHA256 6c274091a39eb0faa1a7ca6c182509041f04cd409fdab39b039604421fa77343
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk5rM80ACgkQzJrj3cAXR0kg9wCgnl84kc38xLpvYjy+v5b4dWBI
-fRcAniT0oUisngSDmsb0w7QK6Kd+bz8u
-=/5Mp
+iEYEAREKAAYFAk5rNm8ACgkQzJrj3cAXR0nNyACfewtuDPNzT66+ueoG4/voxhwb
+PhQAnix5OPhzdEfRy38axz0Oi8XsuXSh
+=xn7e
 -----END PGP SIGNATURE-----
