@@ -1,5 +1,5 @@
 
-dev-vcs/git zsh-completion? ( app-shells/zsh )
+dev-vcs/git
 0
 https://github.com/nvie/gitflow/tarball/0.4.1 -> gitflow-0.4.1.tar.gz https://github.com/nvie/shFlags/tarball/1.0.3@128 -> shFlags-1.0.3.tar.gz https://github.com/bobthecow/git-flow-completion/tarball/0.4.0 -> git-flow-completion-0.4.0.tar.gz
 
@@ -8,7 +8,7 @@ BSD-2 MIT
 High-level repository operations for Vincent Driessen's branching model
 ~amd64 ~x86
 bash-completion-r1 eutils jnrowe-github multilib portability toolchain-funcs
-zsh-completion
+
 
 
 
